Added Profile pic

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <!-- Hero Image -->
                     <div class="flex justify-center">
                         <img 
-                            src="https://placehold.co/600x600/E9D5FF/4338CA?text=Jayeeta+Das" 
+                            src="profile_pic.jpeg" 
                             alt="A professional portrait of Jayeeta Das"
                             class="rounded-full shadow-2xl w-3/4 max-w-sm md:w-full md:max-w-md"
                             onerror="this.onerror=null;this.src='https://placehold.co/600x600/E9D5FF/4338CA?text=Image+Error';"
