--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
                 <!-- Contact Form -->
                 <div class="max-w-lg mx-auto mt-12">
-                    <form action="#" method="POST" class="space-y-6">
+                    <form action="https://formspree.io/f/xeovenqv" method="POST" class="space-y-6">
                         <div>
                             <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
                             <input type="text" name="name" id="name" autocomplete="name" required
